--- a/fs/mal.fsproj
+++ b/fs/mal.fsproj
@@ -51,8 +51,9 @@
     <Compile Include="step0_repl.fs" />
     <Compile Include="step1_read_print.fs" />
     <Compile Include="Program.fs" />
-    <Compile Include="tokenizer.fs" />
-    <Compile Include="reader.fs" />
+    <Compile Include="Matching.fs" />
+    <Compile Include="Types.fs" />
+    <Compile Include="Reader.fs" />
   </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
