--- a/fs/mal.fsproj
+++ b/fs/mal.fsproj
@@ -48,12 +48,14 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <Compile Include="step0_repl.fs" />
-    <Compile Include="step1_read_print.fs" />
-    <Compile Include="Program.fs" />
     <Compile Include="Matching.fs" />
     <Compile Include="Types.fs" />
     <Compile Include="Reader.fs" />
+    <Compile Include="step0_repl.fs" />
+    <Compile Include="step1_read_print.fs" />
+    <Compile Include="Program.fs" />
+    <None Include="Scripts\load-references.fsx" />
+    <None Include="Scripts\load-project.fsx" />
   </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
